examples/network_policy_overrides.yaml
# Create a NetworkPolicy named my-app-network-policy to restrict incoming and outgoing traffic to my-app-deployment pods with the following specifications:

# Allow incoming traffic only from pods.
# Allow incoming traffic from a specific pod with the label app=trusted
# Allow outgoing traffic to pods.
# Deny all other incoming and outgoing traffic. 

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-app-network-policy
spec:
  podSelector:
    matchLabels:
      app: my-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
  - from:
    - podSelector:
        matchLabels:
          app: trusted
  egress:
  - to:
    - podSelector: {}
